2004-08-30  fraca7  <fraca7@free.fr>

	* ed2k_hash/main.c (is_directory): Particularly ugly hack to
	recognize 'C:\' and stuff as a directory...

	* ed2k_hash/GUI/MainWindow.cpp (add_dir_cb): Hack to work around
	drives and directories mix

	* ed2k_hash/processfile.c: Windows-friendly version of
	get_file_size (under Windows, it seems that ftell returns a signed
	integer, so is limited to 2Gb files).

2003-06-28 08:30  fraca7

	* ed2k_hash/GUI/: About.cpp, configure.in: updated version number

2003-06-24 23:51  uberdork

	* ed2k_hash/processfile.c: reverted wrong 'fix'

2003-06-24 00:14  uberdork

	* ed2k_hash/processfile.c: fix for files exactly 9278000 bytes
	  large

2003-06-15 15:54  fraca7

	* ed2k_hash/GUI/: About.h, Configuration.cpp, Configuration.h,
	  MainWindow.cpp, MainWindow.h, gui.cpp, ui.cpp: changed .h to .H
	  for FLTK includes

2003-06-12 20:28  uberdork

	* ed2k_hash/GUI/README: added comments about autogen.sh and about
	  development headers

2003-06-12 20:25  uberdork

	* ed2k_hash/GUI/cvs-clean.pl: added cvs-clean script

2003-06-12 20:15  uberdork

	* ed2k_hash/GUI/autogen.sh: added autogen.sh script for *nix
	  systems

2003-05-25 15:33  fraca7

	* ed2k_hash/GUI/ShellExt/: CtxMenu.ncb, CtxMenu.opt, CtxMenu.plg,
	  ShUtils.cpp: Added 2 entries in context menu

2003-05-25 15:23  fraca7

	* ed2k_hash/GUI/: ShellExt/CtxMenu.cpp, ShellExt/CtxMenu.def,
	  ShellExt/CtxMenu.h, ShellExt/CtxMenu.ncb, ShellExt/CtxMenu.opt,
	  ShellExt/CtxMenu.plg, ShellExt/FileProcess.cpp,
	  ShellExt/FileProcess.h, ShellExt/Priv.h, ShellExt/ShUtils.cpp,
	  ShellExt/ShUtils.h, ShellExt/ShellCtxMenu.cpp,
	  ShellExt/ShellExt.cpp, ShellExt/ShellExt.h,
	  ShellExt/ShellExtReg.cpp, ShellExt/StdAfx.cpp, ShellExt/StdAfx.h,
	  ShellExt/ThreadStruct.h, ShellExt/resource.h, MainWindow.cpp:
	  Added 2 entries in context menu

2003-05-25 15:15  fraca7

	* ed2k_hash/GUI/: ed2k_hash.dev, MainWindow.cpp, gui.cpp,
	  Makefile.win: last locking fixes, I hope

2003-05-25 14:37  fraca7
