@@ -1,3 +1,8 @@
+2004-11-07  uberdork
+	* ed2k_hash/processfile.c: Use _SC_PAGESIZE if defined, insted
+	  _SC_PAGE_SIZE, and user getpagesize() as fallback on BSD.
+	  Patch by Yar Tikhiy (#1061892).
+
 2004-08-30  fraca7  <fraca7@free.fr>
 
 	* ed2k_hash/main.c (is_directory): Particularly ugly hack to
